# kbiw

./: README.md  pyproject.toml
kbiw/: convertpaletted.py  ctables.py  grok.py  kakadu.py  kbiw.py  pixelcheck.py  shared.py  test.py
kbiw/conf/: config.json  cprofiles.json
kbiw/workflows/: generic.py  tifftojp2.py  tifftojp2mh.py
