[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kbiw"
dynamic = ["version"]
authors = [
  { name="Johan van der Knijff", email="johan.vanderknijff@kb.nl" },
]
description = "KB Image Workflow Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "lxml",
  "pyvips",
  "jpylyzer",
  "pyexiftool"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.scripts]
kbiw = "kbiw.kbiw:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "kbiw.kbiw.__version__"}

[project.urls]
Homepage = "https://github.com/KBNLresearch/kbiw/"
Issues = "https://github.com/KBNLresearch/kbiw/issues"
